# IDC-Monte-Carlo

./: .gitignore  ANALYSIS_PLAN.md  DEVIATIONS.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: reproduce.yml
outputs/: checksums.txt
priors/: moderate.yaml  optimistic.yaml  pessimistic.yaml
scripts/: verify_checksum.py
src/idc_simulation/: __init__.py  __main__.py  analyses.py  cli.py  contamination.py  priors.py  reporting.py  run_log.py  simulation.py
tests/: test_analyses.py  test_cli.py  test_contamination.py  test_priors.py  test_reporting.py  test_run_log.py  test_simulation.py
weights/: severity_weights.yaml
