[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "idc-simulation"
version = "0.1.0"
description = "Prior predictive Monte Carlo simulation for the Iatrogenic Data Contamination (IDC) Bayesian framework."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Jean Raubenheimer", email = "jean.raubenheimer@gmail.com" },
]
keywords = ["bayesian", "monte-carlo", "clinical-ai", "hallucination", "idc"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=2.0",
    "scipy>=1.13",
    "pandas>=2.2",
    "matplotlib>=3.9",
    "pyyaml>=6.0",
    "pyarrow>=15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
idc-simulation = "idc_simulation.cli:main"

[project.urls]
Repository = "https://github.com/Precision-Data/IDC-Monte-Carlo"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers"
